# NMP_Vehicle_Team_Protobuf

./: CMakeLists.txt  README.md  data.pb.cc  data.pb.h  data.proto  filewriter.cpp  filewriter.hpp  main.cpp  sample.cpp  sample.hpp
storage/: data.text
