cmake_minimum_required(VERSION 3.13)
project(NMP_VTeam_21T3)
include_directories(${PROTOBUF_INCLUDE_DIR})
include_directories(${PROJECT_SOURCE_DIR})
include(FindProtobuf)
find_package(Protobuf REQUIRED)
set(CMAKE_CXX_STANDARD 14)
add_executable(main data.pb.cc data.pb.h sample.hpp filewriter.cpp filewriter.hpp main.cpp)
target_link_libraries(main ${PROTOBUF_LIBRARIES})